--- a/index.html
+++ b/index.html
@@ -1,48 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-  <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
 
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
   
-  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+	<script src="js/zepto.min-1.2.0.js"></script>
+	<script src="js/script.js"></script>
 
-  <title>Anti-mosquito</title>
+	<title>Anti-mosquito</title>
 </head>
 <body>
-	<div class="menu">
-		<h1>Anti-mosquito</h1>
-		<!--<img class="logo" src="img/dot.png" alt="Logo">
+	<script	>document.write('');</script>
+	<noscript>
+		<p class="error"><img src="img/alert.png" alt="Alerta"><b>Â¡ERROR!</b>Â¡JavaScript debe estar habilitado!</p>
+	</noscript>
+	<header class="cabecera">
+		<img class="logo" src="img/timer.png" onclick="window.open('http://aquiesta.org','_blank')" alt="Logo">
+		<h2>Anti-mosquito</h2>
+		<!--<img class="logo" src="img/dot.png" alt="Logo" >
 		<h2>Anti-mosquito</h2>
 		<img class="close" src="img/close.png" onclick="cerrar()" alt="Cerrar" width="40" height="40">-->
-	</div>
+	</header>
+
 	<div class="mosquito">
 		<img src="img/mosquito.png" onclick="mosquito_image_action()" alt="mosquito zumbón">
-
-		<div class="rate-and-share-container">
-<!--			<a href="http://marketplace.firefox.com/app/antimosquito" target="_blank" class="rate-button">
-				<span class="star"><img src="img/star.png" alt=""></span>
-				<span class="rate-text">¡califícame!</span>
-			</a>
-			&nbsp;&nbsp;
--->
-			<a href="http://www.aquiesta.org/" target="_blank" class="rate-button">
-				<span class="star"><img src="img/star.png" alt=""></span>
-				<span class="rate-text">¡Más apps!</span>
-			</a>
-		</div>
 	</div>
 	
-	<div class="button">
+	<footer class="button">
 		<div class="buttonitem button_1" onclick="button_action(1)">16 kHz</div>
 		<div class="buttonitem button_2" onclick="button_action(2)">18 kHz</div>
 		<div class="buttonitem button_3" onclick="button_action(3)">20 kHz</div>
 		<div class="buttonitem button_4" onclick="button_action(4)">21 kHz</div>
 		<div class="buttonitem button_5" onclick="button_action(5)">22 kHz</div>
-	</div>
-	
+	</footer>
+		
 </body>
 </html>
