--- a/acercade.html
+++ b/acercade.html
@@ -16,8 +16,7 @@
 	<title>Anti-mosquito</title>
 </head>
 <body>
-	<script	>document.write('');</script>
-	<noscript><p class="error"><img src="img/alert.png" alt="Alerta"><b>Â¡ERROR!</b>Â¡JavaScript debe estar habilitado!</p></noscript>
+
 	
 	<header class="cabecera"><h2>Anti-mosquito</h2></header>			
 
@@ -36,18 +35,26 @@
 		<li><a href="acercade.html">Acerca de</a></li>
 	</ul>
 	</div>
-
-	<!-- APLICACIÓN -->
-	<br><div class="mosquito">
-		<img src="img/mosquito.png" onclick="mosquito_image_action()" alt="mosquito zumb&oacute;n">
-	</div>
 	
-	<footer class="button">
-		<div class="buttonitem button_1" onclick="button_action(1)">16 kHz</div>
-		<div class="buttonitem button_2" onclick="button_action(2)">18 kHz</div>
-		<div class="buttonitem button_3" onclick="button_action(3)">20 kHz</div>
-		<div class="buttonitem button_4" onclick="button_action(4)">21 kHz</div>
-		<div class="buttonitem button_5" onclick="button_action(5)">22 kHz</div>
-	</footer>	
+	<footer class="cuerpo">
+		<table>
+			<tbody>
+			<tr>
+			<td><img src="img/icons/icon-48x48.png" alt="logo" class="imgcenter"><br>
+			</td>
+			</tr>
+			<tr>
+			<td><h4>App desarrollada por <a href="http://aquiesta.org" target="_blank">J. Juan Hernández</a></h4><br>
+			</td>
+			</tr>
+			<tr>
+			<td><p>Versión 1.0.1: Dependencias actualizadas.</p>
+				<p>Versi&oacute;n 1.0.0: Versión inicial.</p>
+			</td>
+			</tr>
+			</tbody>
+		</table>
+	</footer>
+	
 </body>
 </html>
