--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="UTF-8">
-	<link rel="manifest" href="manifest.json">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/style_menu.css">
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	  
-	<script src="js/zepto.min-1.2.0.js"></script>
-	<script src="js/script.js"></script>
+  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
+<!--  <script type="text/javascript">
+	//Global var to store a reference to the opened window
+	var openedWindow;
+	function openWindow(){
+		openedWindow = window.open('index.html');
+	}
+	function closeOpenedWindow(){
+		openedWindow.close();
+	}
+</script>  -->
 
-	<title>Anti-mosquito</title>
+  <title>Cron&oacute;metro</title>
 </head>
-<body>
-	<script	>document.write('');</script>
-	<noscript><p class="error"><img src="img/alert.png" alt="Alerta"><b>Â¡ERROR!</b>Â¡JavaScript debe estar habilitado!</p></noscript>
-	
-	<header class="cabecera"><h2>Anti-mosquito</h2></header>			
+<body onload="show()">
+	<script type="text/javascript">document.write('');</script>
+	<noscript>
+		<p class="error"><img src="img/alert.png"><b>Â¡ERROR!</b>Â¡JavaScript debe estar habilitado!</p>
+	</noscript>
 
-	<!-- MENÚ -->
-	<input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
-	<label for="openSidebarMenu" class="sidebarIconToggle">
-		<div class="spinner diagonal part-1"></div>
-		<div class="spinner horizontal"></div>
-		<div class="spinner diagonal part-2"></div>
-	</label>
-	<div id="sidebarMenu">  
-	<ul class="sidebarMenuInner">
-		<li><a href="index.html">Inicio</a></li>
-		<li><a href="https://github.com/jjuanhdez/anti-mosquito" target="_blank">GitHub</a></li>
-		<li><a href="http://www.aquiesta.org/webapp/" target="_blank">Más aplicaciones</a></li>
-		<li><a href="acercade.html">Acerca de</a></li>
-	</ul>
-	</div>
-
-	<!-- APLICACIÓN -->
-	<br><div class="mosquito">
-		<img src="img/mosquito.png" onclick="mosquito_image_action()" alt="mosquito zumb&oacute;n">
-	</div>
+    <header>
+	<div class="cabecera">
+		<img class="logo" src="img/timer.png" alt="Logo">
+		<h2>Cron&oacute;metro</h2>
+		<!--<img class="close" src="img/close.png" alt="Cerrar" onclick="cerrar();">
+		<input class="close" id="image" type="image" alt="Cerrar" src="img/close.png" onclick="javascript: self.open('', '_parent', ''); javascript: self.close(opener = null);">-->
+    </div>
+	</header>
 	
-	<footer class="button">
-		<div class="buttonitem button_1" onclick="button_action(1)">16 kHz</div>
-		<div class="buttonitem button_2" onclick="button_action(2)">18 kHz</div>
-		<div class="buttonitem button_3" onclick="button_action(3)">20 kHz</div>
-		<div class="buttonitem button_4" onclick="button_action(4)">21 kHz</div>
-		<div class="buttonitem button_5" onclick="button_action(5)">22 kHz</div>
-	</footer>	
+    <div class="clock"><h1 id="time"></h1></div>
+    
+	<ol id="laps" reversed></ol>
+    
+	<div id="start" class="button" onclick="start();">Empezar</div>
+	<div id="reset" class="button" onclick="reset();">Resetear</div>
+    <div id="lap" class="button" onclick="lap();">Vuelta</div>
+    <div id="clear" class="button" onclick="limpa();">Limpiar</div>
+	
+	<footer>
+		<a class="pie" href="acercade.html">Acerca de</a>
+	</footer>
 </body>
 </html>
